--- a/src/static/styles/common.scss
+++ b/src/static/styles/common.scss
@@ -18,25 +18,18 @@ view {
 */
 
 .uni-toast {
-    background-color: #fff7f8;
-    box-shadow: 0 0 10px pink;
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    background-color: #585858;
+    box-shadow: 0 0 10px #fff;
 
     .uni-loading {
         background-image: none;
         border-radius: 50%;
-        border-top: 16px pink solid;
-        position: relative;
-        top: 50%;
+        border-top: 16px #fff solid;
     }
 
     .uni-toast__content {
-        color: black;
+        color: #fff;
         font-size: 12px;
-        position: relative;
-        top: 50%;
     }
 }
 
